// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentText renders with only the description 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin-bottom: 40px;
}

.emotion-1 {
  margin: 0;
  padding: 1px 0;
  color: #2E2E2E;
}

.emotion-1 svg {
  fill: #2E2E2E;
}

@media screen and (max-width: 1439px) {
  .emotion-1 {
    font-family: "DM Sans",sans-serif;
    font-size: 16px;
    line-height: 1.5;
    font-weight: 400;
    letter-spacing: -0.5px;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.43125em;
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.43125em;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-1 {
    font-family: "DM Sans",sans-serif;
    font-size: 18px;
    line-height: 1.5555555555555556;
    font-weight: 400;
    letter-spacing: -0.5px;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.4590277777777778em;
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.4590277777777778em;
  }
}

<div
    class="emotion-0"
  >
    <p
      class="emotion-1"
    >
      description
    </p>
  </div>
</DocumentFragment>
`;

exports[`ContentText renders with only the title 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin-bottom: 40px;
}

.emotion-1 {
  margin: 0;
  padding: 1px 0;
  color: #0A0A0A;
}

.emotion-1 svg {
  fill: #0A0A0A;
}

@media screen and (max-width: 1439px) {
  .emotion-1 {
    font-family: "Poppins",sans-serif;
    font-size: 20px;
    line-height: 1.2;
    font-weight: 700;
    letter-spacing: -0.5px;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.28125em;
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.28125em;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-1 {
    font-family: "Poppins",sans-serif;
    font-size: 22px;
    line-height: 1.0909090909090908;
    font-weight: 700;
    letter-spacing: -0.5px;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.22670454545454544em;
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.22670454545454544em;
  }
}

<div
    class="emotion-0"
  >
    <p
      class="emotion-1"
    >
      Title
    </p>
  </div>
</DocumentFragment>
`;

exports[`ContentText renders with title and description 1`] = `
<DocumentFragment>
  @media screen and (max-width: 767px) {
  .emotion-0 {
    margin-bottom: 16px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    margin-bottom: 20px;
  }
}

.emotion-1 {
  margin: 0;
  padding: 1px 0;
  color: #0A0A0A;
}

.emotion-1 svg {
  fill: #0A0A0A;
}

@media screen and (max-width: 1439px) {
  .emotion-1 {
    font-family: "Poppins",sans-serif;
    font-size: 20px;
    line-height: 1.2;
    font-weight: 700;
    letter-spacing: -0.5px;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.28125em;
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.28125em;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-1 {
    font-family: "Poppins",sans-serif;
    font-size: 22px;
    line-height: 1.0909090909090908;
    font-weight: 700;
    letter-spacing: -0.5px;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.22670454545454544em;
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.22670454545454544em;
  }
}

<div
    class="emotion-0"
  >
    <p
      class="emotion-1"
    >
      Title
    </p>
  </div>
  .emotion-0 {
  margin-bottom: 40px;
}

.emotion-1 {
  margin: 0;
  padding: 1px 0;
  color: #2E2E2E;
}

.emotion-1 svg {
  fill: #2E2E2E;
}

@media screen and (max-width: 1439px) {
  .emotion-1 {
    font-family: "DM Sans",sans-serif;
    font-size: 16px;
    line-height: 1.5;
    font-weight: 400;
    letter-spacing: -0.5px;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.43125em;
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.43125em;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-1 {
    font-family: "DM Sans",sans-serif;
    font-size: 18px;
    line-height: 1.5555555555555556;
    font-weight: 400;
    letter-spacing: -0.5px;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.4590277777777778em;
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.4590277777777778em;
  }
}

<div
    class="emotion-0"
  >
    <p
      class="emotion-1"
    >
      description
    </p>
  </div>
</DocumentFragment>
`;
